dependencies/monitoring/loki-stack/configs/loki-stack-grafana-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: app-api
  labels:
    app: app-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/custom-http-errors: "404,502"
    nginx.ingress.kubernetes.io/default-backend: error-pages
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: loki-stack-grafana
          servicePort: 80
  tls:
  - hosts:
    - example.com
    secretName: letsencrypt-grafana
